交接文档深度 REVIEW: 4 处过期内容修复(§六标题 6.52-6.86 48 篇/§6.0 摘要更新到 29 域完结+28/29 域经验/§6.1 131 篇补 28/29 域/§〇 铁律数字);§6.0 重写含新教训(6.86 环境行格式陷阱/MAPPINGS 归属/read 行号偏移)